--- a/pviewer5/TestDataGrid.xaml
+++ b/pviewer5/TestDataGrid.xaml
@@ -65,8 +65,10 @@
         <DataTemplate DataType="{x:Type local:tdggroupingaxis}">
             <WrapPanel Orientation="Horizontal" Margin="-1" Width="200" Background="{DynamicResource {x:Static SystemColors.ControlDarkBrushKey}}"  >
                 <CheckBox x:Name="checkBox" IsChecked="{Binding ischecked}" Margin="3" Click="tdgaxischeck_Click"/>
-                <Button x:Name="button_up"  Content="Up" Margin="3" Padding="0" FontSize="10" Click="tdgaxisup_Click"/>
-                <Button x:Name="button_dn" Content="Dn" Margin ="3" Padding="0" FontSize="10" Click="tdgaxisdown_Click"/>
+                <Button x:Name="button_top"  Content="Top" Margin="3" Padding="0" FontSize="10" Click="tdgaxisbutton_Click"/>
+                <Button x:Name="button_up"   Content="Up"  Margin="3" Padding="0" FontSize="10" Click="tdgaxisbutton_Click"/>
+                <Button x:Name="button_dn"   Content="Dn"  Margin="3" Padding="0" FontSize="10" Click="tdgaxisbutton_Click"/>
+                <Button x:Name="button_bot"  Content="Bot" Margin="3" Padding="0" FontSize="10" Click="tdgaxisbutton_Click"/>
                 <Label x:Name="label" Content="{Binding displayname}" Margin="3" Padding="1" FontSize="10"/>
             </WrapPanel>
         </DataTemplate>
@@ -168,6 +170,13 @@
                     </GroupStyle.HeaderTemplate>
                 </GroupStyle>
             </DataGrid.GroupStyle>
+            <DataGrid.ContextMenu>
+                <ContextMenu>
+                    <MenuItem x:Name="tdg_break_out" Header="Break Out" Command="{x:Static local:TestDataGrid.tdg_break_out_cmd}"/>
+                    <MenuItem x:Name="tdg_group"     Header="Group"     Command="{x:Static local:TestDataGrid.tdg_group_cmd}"/>
+                </ContextMenu>
+            </DataGrid.ContextMenu>
+
         </DataGrid>
       
     </Grid>
