--- a/pviewer5/TestDataGrid.xaml
+++ b/pviewer5/TestDataGrid.xaml
@@ -79,12 +79,12 @@
                 <Label x:Name="label" Content="{Binding displayname}" Margin="3" Padding="1" FontSize="10"/>
             </WrapPanel>
         </DataTemplate>
-        <HierarchicalDataTemplate DataType="{x:Type local:tdgnodenonleaf}"
+        <HierarchicalDataTemplate DataType="{x:Type local:tdgnode}"
                                   ItemsSource="{Binding Path=L}">
 
             <Label x:Name="label" Content="{Binding displayinfo}" Margin="3" Padding="1" FontSize="10"/>
         </HierarchicalDataTemplate>
-        <HierarchicalDataTemplate DataType="{x:Type local:tdgnodeleaf}">
+        <HierarchicalDataTemplate DataType="{x:Type local:tdgleaf}">
             <DataGrid
             Grid.Row="2"
 			EnableColumnVirtualization="True"
