tree commands working; will try changing root to a tdgnode next

--- a/pviewer5/TestDataGrid.xaml
+++ b/pviewer5/TestDataGrid.xaml
@@ -115,7 +115,7 @@
 
                     <DataGrid.Columns>
                         <DataGridTextColumn Header="IP" Binding="{Binding SrcIP4}"/>
-                        <DataGridTextColumn Header="Proto" Binding="{Binding Prots}"/>
+                        <DataGridTextColumn Header="Proto" Binding="{Binding ProtOuter}"/>
                         <DataGridTextColumn Header="GroupType" Binding="{Binding PGTypeg}"/>
                     </DataGrid.Columns>
                     <DataGrid.ContextMenu>
