--- a/pviewer5/MainWindow.xaml
+++ b/pviewer5/MainWindow.xaml
@@ -369,6 +369,70 @@
             <Button Content="Add Filter Item" Click="filteritem_addfilteritem"/>
         </DataTemplate>
 
+        <DataTemplate DataType="{x:Type local:tdggroupingaxis}">
+            <WrapPanel Orientation="Horizontal" Margin="-1" Width="300" Background="{DynamicResource {x:Static SystemColors.ControlDarkBrushKey}}"  >
+                <CheckBox x:Name="checkBox" IsChecked="{Binding ischecked}" Margin="3" Click="tdgaxischeck_Click"/>
+                <Button x:Name="button_top"  Content="Top" Margin="3" Padding="0" FontSize="10" Click="tdgaxisbutton_Click"/>
+                <Button x:Name="button_up"   Content="Up"  Margin="3" Padding="0" FontSize="10" Click="tdgaxisbutton_Click"/>
+                <Button x:Name="button_dn"   Content="Dn"  Margin="3" Padding="0" FontSize="10" Click="tdgaxisbutton_Click"/>
+                <Button x:Name="button_bot"  Content="Bot" Margin="3" Padding="0" FontSize="10" Click="tdgaxisbutton_Click"/>
+                <Label x:Name="label" Content="{Binding displayname}" Margin="3" Padding="1" FontSize="10"/>
+            </WrapPanel>
+        </DataTemplate>
+        <HierarchicalDataTemplate DataType="{x:Type local:tdgnode}"
+                                  ItemsSource="{Binding Path=L}">
+            <StackPanel>
+                <TextBlock x:Name="label" Text="{Binding displayinfo}" Margin="3" Padding="1" FontSize="10">
+                    <TextBlock.ContextMenu>
+                        <ContextMenu>
+                            <MenuItem x:Name="tdg_break_out" Header="Break Out" Command="{x:Static local:MainWindow.tdg_break_out_cmd}" CommandParameter="{Binding self}"/>
+                            <MenuItem x:Name="tdg_group"     Header="Group"     Command="{x:Static local:MainWindow.tdg_group_cmd}"/>
+                            <ContextMenu.CommandBindings>
+                                <CommandBinding Command="{x:Static local:MainWindow.tdg_break_out_cmd}" Executed="tdg_break_out_Executed" CanExecute="tdg_break_out_CanExecute"/>
+                                <CommandBinding Command="{x:Static local:MainWindow.tdg_group_cmd}"     Executed="tdg_group_Executed"     CanExecute="tdg_group_CanExecute"/>
+                            </ContextMenu.CommandBindings>
+                        </ContextMenu>
+                    </TextBlock.ContextMenu>
+                </TextBlock>
+
+            </StackPanel>
+
+        </HierarchicalDataTemplate>
+        <HierarchicalDataTemplate DataType="{x:Type local:tdgleaf}">
+            <TreeViewItem Header="{Binding displayinfo}">
+                <DataGrid
+			        EnableColumnVirtualization="True"
+			        EnableRowVirtualization="True"
+			        VirtualizingPanel.IsVirtualizing="True"
+			        VirtualizingPanel.VirtualizationMode="Recycling"
+			        AutoGenerateColumns="False"
+                    CanUserDeleteRows="False"
+                    CanUserAddRows="False"
+                    SelectionUnit="Cell"
+                    SelectionMode="Single"
+                    IsReadOnly="True"
+                    ItemsSource="{Binding Path=L}">
+
+                    <DataGrid.Columns>
+                        <DataGridTextColumn Header="IP4 Src" Binding="{Binding SrcIP4}"/>
+                        <DataGridTextColumn Header="IP4 Dest" Binding="{Binding DestIP4}"/>
+                        <DataGridTextColumn Header="IP4 Src, Dest" Binding="{Binding SrcDestIP4}"/>
+                        <DataGridTextColumn Header="Protocol" Binding="{Binding ProtOuter}"/>
+                        <DataGridTextColumn Header="Pkt Grp Type" Binding="{Binding PGType}"/>
+                    </DataGrid.Columns>
+                    <DataGrid.ContextMenu>
+                        <ContextMenu>
+                            <MenuItem x:Name="tdg_break_out" Header="Break Out" Command="{x:Static local:MainWindow.tdg_break_out_cmd}"/>
+                            <MenuItem x:Name="tdg_group"     Header="Group"     Command="{x:Static local:MainWindow.tdg_group_cmd}"/>
+                            <ContextMenu.CommandBindings>
+                                <CommandBinding Command="{x:Static local:MainWindow.tdg_break_out_cmd}" Executed="tdg_break_out_Executed" CanExecute="tdg_break_out_CanExecute"/>
+                                <CommandBinding Command="{x:Static local:MainWindow.tdg_group_cmd}"     Executed="tdg_group_Executed"     CanExecute="tdg_group_CanExecute"/>
+                            </ContextMenu.CommandBindings>
+                        </ContextMenu>
+                    </DataGrid.ContextMenu>
+                </DataGrid>
+            </TreeViewItem>
+        </HierarchicalDataTemplate>
     </Window.Resources>
 
     <Grid Name="gridmain">
@@ -401,6 +465,7 @@
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto"/>
                     <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
                     <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
 
@@ -421,6 +486,14 @@
                        Grid.Row="0"
                        Margin="5,5,5,5">
                 </WrapPanel>
+                <ListBox Name="axislist"
+                    Grid.Row="2"
+                    Grid.Column="0"
+                    Grid.ColumnSpan="2"
+                    Margin="5,5,5,5"
+                    ItemsSource="{Binding Path=axes}">
+                </ListBox>
+
                 <WrapPanel Name="viewsettings"
                        Grid.Column="0"
                        Grid.ColumnSpan="2"
@@ -437,17 +510,15 @@
                           IsChecked="{Binding Source={StaticResource GUIUtilKey}, Path=Instance.Hex, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                           Margin="20,5"/>
                 </WrapPanel>
-                <GroupBox Header="Packet Groups"
+                <GroupBox Header="Packet Tree"
                       Name="grouptreebox"
                       Grid.Column="0"
                       Grid.ColumnSpan="2"
-                      Grid.Row="2"
+                      Grid.Row="3"
                       Margin="5,5,5,5">
-                    <TreeView Name="grouptree"
-                            VirtualizingPanel.IsVirtualizing="True"
-                            VirtualizingPanel.VirtualizationMode="Recycling"
-                          ItemsSource="{Binding Path=grouplistlist.L}"
-                          SelectedItemChanged="grouptree_SelectedItemChanged">
+                    <TreeView
+                        x:Name="pkttree"
+                        ItemsSource="{Binding Path=root}">  
                         <TreeView.ItemContainerStyle>
                             <Style TargetType="TreeViewItem">
                                 <Setter Property="IsExpanded" Value="{Binding IsExpanded, Mode=TwoWay}" />
@@ -455,7 +526,6 @@
                         </TreeView.ItemContainerStyle>
 
                     </TreeView>
-
                 </GroupBox>
             </Grid>
             <Grid Name="gridleftbottom"
@@ -793,6 +863,24 @@
 
 </Window>
 
+    
+    
+<!--  treeview from previous design with fixed tree hierarchy
+        
+                            <TreeView Name="grouptree"
+                            VirtualizingPanel.IsVirtualizing="True"
+                            VirtualizingPanel.VirtualizationMode="Recycling"
+                          ItemsSource="{Binding Path=grouplistlist.L}"
+                          SelectedItemChanged="grouptree_SelectedItemChanged">
+    <TreeView.ItemContainerStyle>
+        <Style TargetType="TreeViewItem">
+            <Setter Property="IsExpanded" Value="{Binding IsExpanded, Mode=TwoWay}" />
+        </Style>
+    </TreeView.ItemContainerStyle>
+
+    </TreeView>   -->
+    
+    
         <!--  QUICKFILTER DATAGRID IS DEPRECATED - KEEP AS AN EXAMPLE OF DATAGRID PATTERNS
         <GroupBox Header="Packets Excluded by QuickFilter"
                   Name="qfexcldg"
